networkPolicies/allow-from-ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
    name: allow-from-ingress
spec:
    ingress:
    - from:
      - namespaceSelector:
          matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: In
            values:
              - "nginx-public"
              - "openshift-ingress"
    podSelector: {}
    policyTypes:
    - Ingress
