networkPolicies/deny-default.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-default
spec:
    podSelector: {}
    policyTypes:
    - Ingress
